--- a/notebooks/02-feature-engineering.ipynb
+++ b/notebooks/02-feature-engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "765f7de8",
    "metadata": {},
    "outputs": [
@@ -11,12 +11,12 @@
      "output_type": "stream",
      "text": [
       "Note: you may need to restart the kernel to use updated packages.\n",
-      "No summary files found or files empty — creating empty DataFrame with `url` column\n",
-      "No summary files found or files empty — creating empty DataFrame with `url` column\n",
-      "No summary files found or files empty — creating empty DataFrame with `url` column\n",
-      "No summary files found or files empty — creating empty DataFrame with `url` column\n",
-      "Saved features to ../data/processed/phishing_features.csv with shape (0, 14)\n",
-      "Saved features to ../data/processed/phishing_features.csv with shape (0, 14)\n"
+      "Loaded processed summary: ../data/processed/phish_url_summary.csv with shape (53657, 2)\n",
+      "Loaded processed summary: ../data/processed/enron_senders.csv with shape (517401, 2)\n",
+      "Loaded processed summary: ../data/processed/phish_url_summary.csv with shape (53657, 2)\n",
+      "Loaded processed summary: ../data/processed/enron_senders.csv with shape (517401, 2)\n",
+      "Saved features to ../data/processed/phishing_features.csv with shape (53657, 15)\n",
+      "Saved features to ../data/processed/phishing_features.csv with shape (53657, 15)\n"
      ]
     }
    ],
@@ -47,21 +47,34 @@
     "# 1. Imports and Config\n",
     "import os\n",
     "import re\n",
+    "import logging\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import tldextract\n",
     "import whois\n",
     "from datetime import datetime\n",
     "\n",
-    "def extract_urls(text):\n",
-    "    \"\"\"\n",
-    "    Fallback URL extractor when a local 'utils' module is not available.\n",
-    "    Returns a list of http/https URLs found in the input text.\n",
-    "    \"\"\"\n",
-    "    if pd.isna(text):\n",
-    "        return []\n",
-    "    pattern = r\"https?://[^\\s'\\\"<>]+\"\n",
-    "    return re.findall(pattern, text)\n",
+    "# Notebook options\n",
+    "USE_WHOIS = False  # set True to enable network WHOIS lookups (may be slow)\n",
+    "WHOIS_CACHE = os.path.join('..','data','processed','whois_cache.csv')\n",
+    "\n",
+    "# Reduce verbosity from whois library\n",
+    "logging.getLogger('whois.whois').setLevel(logging.ERROR)\n",
+    "\n",
+    "# Simple cache helpers\n",
+    "def load_whois_cache(path):\n",
+    "    if os.path.exists(path):\n",
+    "        try:\n",
+    "            return pd.read_csv(path, index_col=0)\n",
+    "        except Exception:\n",
+    "            return pd.DataFrame(columns=['domain','age_days']).set_index('domain')\n",
+    "    return pd.DataFrame(columns=['domain','age_days']).set_index('domain')\n",
+    "\n",
+    "def save_whois_cache(df, path):\n",
+    "    os.makedirs(os.path.dirname(path), exist_ok=True)\n",
+    "    df.to_csv(path)\n",
+    "\n",
+    "whois_cache = load_whois_cache(WHOIS_CACHE)\n",
     "\n",
     "# File paths\n",
     "PHISH_SUMMARY = os.path.join('..','data','processed','phish_url_summary.csv')\n",
@@ -132,21 +145,39 @@
     "\n",
     "expanded['domain'] = expanded['url'].apply(get_domain_info)\n",
     "\n",
-    "# WHOIS-based age\n",
+    "# WHOIS-based age with cache and optional network\n",
+    "from time import sleep\n",
+    "\n",
     "def calc_domain_age(domain):\n",
     "    if domain is None or pd.isna(domain):\n",
+    "        return np.nan\n",
+    "    # check cache first\n",
+    "    if domain in whois_cache.index:\n",
+    "        return float(whois_cache.loc[domain,'age_days'])\n",
+    "    if not USE_WHOIS:\n",
     "        return np.nan\n",
     "    try:\n",
     "        info = whois.whois(domain)\n",
     "        date = info.creation_date\n",
-    "        if isinstance(date, list): date = date[0]\n",
+    "        if isinstance(date, list):\n",
+    "            date = date[0]\n",
     "        if date is None:\n",
-    "            return np.nan\n",
-    "        return (datetime.now() - date).days\n",
+    "            age = np.nan\n",
+    "        else:\n",
+    "            age = (datetime.now() - date).days\n",
+    "        # update cache\n",
+    "        whois_cache.loc[domain] = [age]\n",
+    "        # be polite to WHOIS servers\n",
+    "        sleep(0.5)\n",
+    "        return age\n",
     "    except Exception:\n",
     "        return np.nan\n",
     "\n",
+    "# compute domain_age_days\n",
     "expanded['domain_age_days'] = expanded['domain'].apply(calc_domain_age)\n",
+    "\n",
+    "# persist cache\n",
+    "save_whois_cache(whois_cache, WHOIS_CACHE)\n",
     "\n",
     "#%%\n",
     "# 6. IP-based URL and subdomain count\n",
