--- a/notebooks/02-feature-engineering.ipynb
+++ b/notebooks/02-feature-engineering.ipynb
@@ -12,11 +12,32 @@
      "text": [
       "Note: you may need to restart the kernel to use updated packages.\n",
       "Loaded processed summary: ../data/processed/phish_url_summary.csv with shape (53657, 2)\n",
-      "Loaded processed summary: ../data/processed/enron_senders.csv with shape (517401, 2)\n",
+      "Loaded processed summary: ../data/processed/enron_senders.csv with shape (1000, 14)\n",
       "Loaded processed summary: ../data/processed/phish_url_summary.csv with shape (53657, 2)\n",
-      "Loaded processed summary: ../data/processed/enron_senders.csv with shape (517401, 2)\n",
+      "Loaded processed summary: ../data/processed/enron_senders.csv with shape (1000, 14)\n",
       "Saved features to ../data/processed/phishing_features.csv with shape (53657, 15)\n",
       "Saved features to ../data/processed/phishing_features.csv with shape (53657, 15)\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'body'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[0;32m~/phishing-risk-detection-project/.venv/lib/python3.10/site-packages/pandas/core/indexes/base.py:3812\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3811\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m-> 3812\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   3813\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
+      "File \u001b[0;32mpandas/_libs/index.pyx:167\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mpandas/_libs/index.pyx:196\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7088\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7096\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'body'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 210\u001b[0m\n\u001b[1;32m    207\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m []\n\u001b[1;32m    208\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m re\u001b[38;5;241m.\u001b[39mfindall(\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhttps?://[^\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124ms]+\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;28mstr\u001b[39m(text))\n\u001b[0;32m--> 210\u001b[0m enron_senders[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124murls\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[43menron_senders\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mbody\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mapply(extract_urls)\n\u001b[1;32m    212\u001b[0m \u001b[38;5;66;03m# 3. Expand rows for each URL\u001b[39;00m\n\u001b[1;32m    213\u001b[0m enron_expanded \u001b[38;5;241m=\u001b[39m enron_senders\u001b[38;5;241m.\u001b[39mexplode(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124murls\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m.\u001b[39mreset_index(drop\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "File \u001b[0;32m~/phishing-risk-detection-project/.venv/lib/python3.10/site-packages/pandas/core/frame.py:4107\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   4105\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m   4106\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[0;32m-> 4107\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   4108\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[1;32m   4109\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
+      "File \u001b[0;32m~/phishing-risk-detection-project/.venv/lib/python3.10/site-packages/pandas/core/indexes/base.py:3819\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3814\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[1;32m   3815\u001b[0m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc\u001b[38;5;241m.\u001b[39mIterable)\n\u001b[1;32m   3816\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[1;32m   3817\u001b[0m     ):\n\u001b[1;32m   3818\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[0;32m-> 3819\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01merr\u001b[39;00m\n\u001b[1;32m   3820\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[1;32m   3821\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[1;32m   3822\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[1;32m   3823\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[1;32m   3824\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'body'"
      ]
     }
    ],
@@ -212,7 +233,86 @@
     "out_dir = os.path.dirname(OUTPUT_FEATURES)\n",
     "os.makedirs(out_dir, exist_ok=True)\n",
     "expanded.to_csv(OUTPUT_FEATURES, index=False)\n",
-    "print(f\"Saved features to {OUTPUT_FEATURES} with shape {expanded.shape}\")\n"
+    "print(f\"Saved features to {OUTPUT_FEATURES} with shape {expanded.shape}\")\n",
+    "\n",
+    "#%% [markdown]\n",
+    "# --- Benign (Enron) Feature Engineering ---\n",
+    "\n",
+    "#%%\n",
+    "\n",
+    "# 1. Load Enron senders/emails (already loaded as enron_senders)\n",
+    "# If not loaded, uncomment:\n",
+    "# ENRON_SENDERS = os.path.join('..','data','processed','enron_senders.csv')\n",
+    "# enron_senders = pd.read_csv(ENRON_SENDERS)\n",
+    "\n",
+    "# 2. Extract URLs from email bodies\n",
+    "def extract_urls(text):\n",
+    "    if pd.isna(text):\n",
+    "        return []\n",
+    "    return re.findall(r'https?://[^\\s]+', str(text))\n",
+    "\n",
+    "enron_senders['urls'] = enron_senders['body'].apply(extract_urls)\n",
+    "\n",
+    "# 3. Expand rows for each URL\n",
+    "enron_expanded = enron_senders.explode('urls').reset_index(drop=True)\n",
+    "enron_expanded = enron_expanded[enron_expanded['urls'].notna()]\n",
+    "enron_expanded = enron_expanded.rename(columns={'urls': 'url'})\n",
+    "\n",
+    "# 4. Feature engineering (match phishing features)\n",
+    "enron_expanded['num_dots'] = enron_expanded['url'].apply(lambda u: u.count('.') if pd.notna(u) else 0)\n",
+    "enron_expanded['num_hyphens'] = enron_expanded['url'].apply(lambda u: u.count('-') if pd.notna(u) else 0)\n",
+    "enron_expanded['num_underscores'] = enron_expanded['url'].apply(lambda u: u.count('_') if pd.notna(u) else 0)\n",
+    "enron_expanded['num_qm'] = enron_expanded['url'].apply(lambda u: u.count('?') if pd.notna(u) else 0)\n",
+    "enron_expanded['has_at'] = enron_expanded['url'].apply(lambda u: 1 if (pd.notna(u) and '@' in u) else 0)\n",
+    "enron_expanded['path_length'] = enron_expanded['url'].apply(lambda u: len(re.sub(r\"https?://[\\w\\.]+\", '', u)) if pd.notna(u) else 0)\n",
+    "\n",
+    "def get_domain_info(url):\n",
+    "    if pd.isna(url):\n",
+    "        return None\n",
+    "    ext = tldextract.extract(str(url))\n",
+    "    domain = f\"{ext.domain}.{ext.suffix}\" if ext.suffix else ext.domain\n",
+    "    return domain\n",
+    "\n",
+    "enron_expanded['domain'] = enron_expanded['url'].apply(get_domain_info)\n",
+    "\n",
+    "def has_ip(url):\n",
+    "    if pd.isna(url):\n",
+    "        return 0\n",
+    "    try:\n",
+    "        host = re.findall(r\"https?://([^/]+)/?\", str(url))[0]\n",
+    "        host = host.split(':')[0]\n",
+    "        ipaddress.ip_address(host)\n",
+    "        return 1\n",
+    "    except Exception:\n",
+    "        return 0\n",
+    "\n",
+    "enron_expanded['has_ip'] = enron_expanded['url'].apply(has_ip)\n",
+    "enron_expanded['subdomain_count'] = enron_expanded['url'].apply(lambda u: u.split('://')[-1].count('.') - 1 if pd.notna(u) else 0)\n",
+    "\n",
+    "enron_expanded['sender_domain'] = enron_expanded['sender'].apply(lambda s: s.split('@')[-1] if pd.notna(s) and '@' in s else np.nan)\n",
+    "enron_expanded['sender_domain_mismatch'] = enron_expanded.apply(\n",
+    "    lambda row: int(row['sender_domain'] != row['domain']) if pd.notna(row['sender_domain']) and pd.notna(row['domain']) else 0,\n",
+    "    axis=1\n",
+    ")\n",
+    "enron_expanded['domain_age_days'] = np.nan  # or use WHOIS if you want\n",
+    "\n",
+    "enron_expanded['label'] = 0  # benign\n",
+    "\n",
+    "# 5. Save benign features\n",
+    "BENIGN_FEATURES = os.path.join('..','data','processed','benign_features.csv')\n",
+    "enron_expanded.to_csv(BENIGN_FEATURES, index=False)\n",
+    "print(f\"Saved benign features to {BENIGN_FEATURES} with shape {enron_expanded.shape}\")\n",
+    "\n",
+    "#%%\n",
+    "\n",
+    "# 6. Combine phishing and benign features for modeling\n",
+    "PHISHING_FEATURES = os.path.join('..','data','processed','phishing_features.csv')\n",
+    "benign_features = pd.read_csv(BENIGN_FEATURES)\n",
+    "phishing_features = pd.read_csv(PHISHING_FEATURES)\n",
+    "all_features = pd.concat([phishing_features, benign_features], ignore_index=True)\n",
+    "ALL_FEATURES = os.path.join('..','data','processed','phishing_graph_features.csv')\n",
+    "all_features.to_csv(ALL_FEATURES, index=False)\n",
+    "print(f\"Combined phishing and benign features saved to {ALL_FEATURES} with shape {all_features.shape}\")"
    ]
   }
  ],
