--- a/notebooks/05-auth-risk-model.ipynb
+++ b/notebooks/05-auth-risk-model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "83eb5048",
    "metadata": {},
    "outputs": [
@@ -11,6 +11,7 @@
      "output_type": "stream",
      "text": [
       "Saved synthetic auth logs to ../data/processed/auth_logs.csv\n",
+      "Saved synthetic auth logs with engineered features to ../data/processed/auth_logs.csv\n",
       "Saved risk model to ../models/auth_risk_model.pkl\n",
       "              precision    recall  f1-score   support\n",
       "\n",
@@ -118,6 +119,10 @@
     "    haversine(row['lat'], row['lon'], *user_home[row['user']]), axis=1)\n",
     "logs_df['new_device'] = logs_df['device'].apply(lambda d: 1 if d == 'Unknown' else 0)\n",
     "\n",
+    "# Save engineered logs with required columns for the model\n",
+    "logs_df.to_csv(LOG_CSV, index=False)\n",
+    "print(\"Saved synthetic auth logs with engineered features to\", LOG_CSV)\n",
+    "\n",
     "#%%\n",
     "# 4. Train Risk Model\n",
     "features = ['distance_km', 'login_hour', 'new_device']\n",
@@ -145,7 +150,7 @@
     "plt.ylabel('True Positive Rate')\n",
     "plt.title('ROC Curve - Authentication Risk Model')\n",
     "plt.legend()\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   }
  ],
